default/objects/success__Reward__c/success__Reward__c.object-meta.xml
<CustomObject>
    <description>Rewards are generated when behaviour conditions have been met. Rewards are specific to users and can include points and a badge in any combination. Rewards contain a link to both the Behaviour (within a Competition or Experience Group) and Base Behavior they are associated with.</description>
    <label>Reward</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Reward ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rewards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>