default/objects/success__Reward__c/fields/success__Achievement__c.field-meta.xml
<CustomField>
    <fullName>success__Achievement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The base behaviour that was used as a reference for the reward generation</inlineHelpText>
    <label>Base Behaviour</label>
    <referenceTo>success__Achievement__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>