default/objects/success__Reward__c/fields/success__Badge_Type__c.field-meta.xml
<CustomField>
    <fullName>success__Badge_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Badge Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>success__Graphic__c.success__Type__c</field>
            <operation>equals</operation>
            <value>Badge</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>success__Graphic__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>