default/objects/success__Reward__c/fields/success__Collective__c.field-meta.xml
<CustomField>
    <fullName>success__Collective__c</fullName>
    <formula>IF(ISBLANK(success__Team_Achievement__c), success__Team_Member__r.success__Team__r.Name, success__Team_Achievement__r.success__Team__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collective ID</label>
    <type>Text</type>
</CustomField>