default/objects/success__Reward__c/fields/success__CollectiveId__c.field-meta.xml
<CustomField>
    <fullName>success__CollectiveId__c</fullName>
    <formula>IF(ISBLANK(success__Team_Achievement__c), success__Team_Member__r.success__Team__c, success__Team_Achievement__r.success__Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collective</label>
    <type>Text</type>
</CustomField>