default/objects/success__Reward__c/fields/success__Competition_Only__c.field-meta.xml
<CustomField>
    <fullName>success__Competition_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>&#39;Restricted&#39; Rewards will only be recognised within the Competitions that use them</inlineHelpText>
    <label>Restricted - DEPRECATED</label>
    <type>Checkbox</type>
</CustomField>