default/objects/success__Reward__c/fields/success__Day__c.field-meta.xml
<CustomField>
    <fullName>success__Day__c</fullName>
    <formula>CASE( MOD(   DATEVALUE(success__Last_Updated_Date_Time__c)   - DATE(1900, 1, 7), 7), 0,  $Label.success__sunday , 1, $Label.success__monday , 2, $Label.success__tuesday, 3,
$Label.success__wednesday, 4, $Label.success__thursday, 5, $Label.success__friday, 6, $Label.success__saturday, &#39;Error&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The day of the week that the reward was awarded</inlineHelpText>
    <label>Day</label>
    <type>Text</type>
</CustomField>