default/objects/success__Reward__c/fields/success__Exceeds_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>success__Exceeds_Time_Limit__c</fullName>
    <formula>OR(NOW() &gt;= success__Time_Limit_Date_Time__c, ISBLANK(success__Time_Limit_Date_Time__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exceeds Time Limit</label>
    <type>Checkbox</type>
</CustomField>