default/objects/success__Reward__c/fields/success__Experience__c.field-meta.xml
<CustomField>
    <fullName>success__Experience__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>