default/objects/success__Reward__c/fields/success__Experience_Group__c.field-meta.xml
<CustomField>
    <fullName>success__Experience_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this option will ensure that Rewards earned within Competitions will be reassigned to the Players Experience Group. This is principally used for assigning finishing position awards to the Players Experience Group trophy cabinet and score</inlineHelpText>
    <label>Experience Group</label>
    <type>Checkbox</type>
</CustomField>