default/objects/success__Reward__c/fields/success__Hidden__c.field-meta.xml
<CustomField>
    <fullName>success__Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Rewards that are flagged as &#39;Hidden&#39; will not be displayed to the Player or count towards their current score</inlineHelpText>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>