default/objects/success__Reward__c/fields/success__Hour__c.field-meta.xml
<CustomField>
    <fullName>success__Hour__c</fullName>
    <description>The hour of the day that the reward was awarded</description>
    <formula>VALUE( MID( TEXT( success__Last_Updated_Date_Time__c  ), 12, 2 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The hour of the day (24 hour clock) that the reward was awarded</inlineHelpText>
    <label>Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>