default/objects/success__Reward__c/fields/success__Last_Updated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>success__Last_Updated_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <inlineHelpText>The date and time that this reward was last updated</inlineHelpText>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>