default/objects/success__Reward__c/fields/success__Level_Up__c.field-meta.xml
<CustomField>
    <fullName>success__Level_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Level Up - DEPRECATED</label>
    <type>Checkbox</type>
</CustomField>