default/objects/success__Reward__c/fields/success__Message__c.field-meta.xml
<CustomField>
    <fullName>success__Message__c</fullName>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>