default/objects/success__Reward__c/fields/success__Number_of_occurrences__c.field-meta.xml
<CustomField>
    <fullName>success__Number_of_occurrences__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Records the total value of the aggregate function specified on the behaviour</inlineHelpText>
    <label>Function Value Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>