default/objects/success__Reward__c/fields/success__Record_Behaviour_Identifier__c.field-meta.xml
<CustomField>
    <fullName>success__Record_Behaviour_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Record Behaviour Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>