default/objects/success__Reward__c/fields/success__Record_Identifier__c.field-meta.xml
<CustomField>
    <fullName>success__Record_Identifier__c</fullName>
    <formula>CASESAFEID(success__Achievement__c) + &#39;-&#39; + success__Rewarded_Object_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Identifier</label>
    <type>Text</type>
</CustomField>