default/objects/success__Reward__c/fields/success__Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>success__Related_Record_Id__c</fullName>
    <formula>CASESAFEID(success__Rewarded_Object_Id__c)</formula>
    <label>Related Record Id</label>
    <type>Text</type>
</CustomField>