default/objects/success__Reward__c/fields/success__Reward_Source__c.field-meta.xml
<CustomField>
    <fullName>success__Reward_Source__c</fullName>
    <description>A hyperlink to the source record that triggered the generation of the reward</description>
    <formula>IF (LEN(success__Rewarded_Object_Id__c)&lt;1, NULL, HYPERLINK(&quot;/&quot; &amp; success__Rewarded_Object_Id__c, &quot;Link to Record&quot;,&quot;_parent&quot;))</formula>
    <inlineHelpText>Hyperlink to the source record that generated the reward</inlineHelpText>
    <label>Reward Source</label>
    <type>Text</type>
</CustomField>