default/objects/success__Reward__c/fields/success__Reward_Status__c.field-meta.xml
<CustomField>
    <fullName>success__Reward_Status__c</fullName>
    <inlineHelpText>Aggregate Behaviours will initially generate Rewards that are &#39;In Progress&#39;. Rewards for behaviours that are not completed within the required time period will be flagged as &#39;Failed&#39;. Successfully completed Behaviours will have an &#39;Awarded&#39; status.</inlineHelpText>
    <label>DEPRECATE - Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Awarded</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>