default/objects/success__Reward__c/fields/success__Reward_Type__c.field-meta.xml
<CustomField>
    <fullName>success__Reward_Type__c</fullName>
    <label>Reward Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>