default/objects/success__Reward__c/fields/success__Rewarded_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>success__Rewarded_Object_Id__c</fullName>
    <label>Rewarded Object ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>