default/objects/success__Reward__c/fields/success__Started_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>success__Started_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <inlineHelpText>The date and time that the reward for this iteration of the behaviour was started</inlineHelpText>
    <label>Started</label>
    <type>DateTime</type>
</CustomField>