default/objects/success__Reward__c/fields/success__Team_Achievement__c.field-meta.xml
<CustomField>
    <fullName>success__Team_Achievement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The behaviour that generated the reward</inlineHelpText>
    <label>Behaviour</label>
    <referenceTo>success__Team_Achievement__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>