default/objects/success__Reward__c/fields/success__Team_Member__c.field-meta.xml
<CustomField>
    <fullName>success__Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Members record with a Competition or Experience Group that has been awarded with the points specified by this reward</inlineHelpText>
    <label>Member</label>
    <referenceTo>success__Team_Member__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>