default/objects/success__Reward__c/fields/success__Test_Record__c.field-meta.xml
<CustomField>
    <fullName>success__Test_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, it indicates that this record was generated via a base behaviour in testing status</inlineHelpText>
    <label>Test Record</label>
    <type>Checkbox</type>
</CustomField>