default/objects/success__Reward__c/fields/success__Time_Limit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>success__Time_Limit_Date_Time__c</fullName>
    <inlineHelpText>The date and time by which the aggregate operation must be completed</inlineHelpText>
    <label>Time limit</label>
    <type>DateTime</type>
</CustomField>