default/objects/success__Reward__c/fields/success__Time_Limit_Expired__c.field-meta.xml
<CustomField>
    <fullName>success__Time_Limit_Expired__c</fullName>
    <formula>IF( success__Time_Limit_Date_Time__c &lt; NOW(), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Limit Expired</label>
    <type>Checkbox</type>
</CustomField>