default/objects/success__Reward__c/fields/success__User__c.field-meta.xml
<CustomField>
    <fullName>success__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user associated with the reward</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>