default/objects/success__Reward__c/listViews/success__InProgress_Rewards.listView-meta.xml
<ListView>
    <fullName>success__InProgress_Rewards</fullName>
    <columns>NAME</columns>
    <columns>success__User__c</columns>
    <columns>success__Achievement__c</columns>
    <columns>success__Collective__c</columns>
    <columns>success__Number_of_occurrences__c</columns>
    <columns>success__Started_Date_Time__c</columns>
    <columns>success__Time_Limit_Date_Time__c</columns>
    <columns>success__Last_Updated_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>success__Reward_Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>In Progress</label>
    <language>en_US</language>
</ListView>