default/objects/success__Reward__c/listViews/success__Rewarded_Rewards.listView-meta.xml
<ListView>
    <fullName>success__Rewarded_Rewards</fullName>
    <columns>NAME</columns>
    <columns>success__User__c</columns>
    <columns>success__Achievement__c</columns>
    <columns>success__Collective__c</columns>
    <columns>success__Experience__c</columns>
    <columns>success__Last_Updated_Date_Time__c</columns>
    <columns>success__Badge_Name__c</columns>
    <columns>success__Badge_Type__c</columns>
    <columns>success__Reward_Type__c</columns>
    <columns>success__Hidden__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>success__Reward_Status__c</field>
        <operation>equals</operation>
        <value>Awarded</value>
    </filters>
    <label>Rewarded</label>
    <language>en_US</language>
</ListView>